modified page content style, fixed mail animation overlap, styled game Selection page

--- a/src/assets/scss/components/02_molecules/gameSelection.scss
+++ b/src/assets/scss/components/02_molecules/gameSelection.scss
@@ -1,5 +1,6 @@
 .game-selection-container {
     height: calc(100vh - 90px);
+    padding-top: 140px;
 
     .header {
         display: table;
@@ -19,7 +20,7 @@
     }
 
     .lead-text {
-        width: 87.5%;
+        width: 100%;
         margin-bottom: 40px;
     }
 
