--- a/src/assets/scss/components/03_organisms/mailContainer.scss
+++ b/src/assets/scss/components/03_organisms/mailContainer.scss
@@ -4,7 +4,7 @@
   left: 110%;
   width: calc(100% - 90px);
   background: white;
-  z-index: 50;
+  z-index: 10;
   transform: translateX(-90px);
   opacity: 0;
 
