--- a/src/assets/scss/components/03_organisms/notebookContainer.scss
+++ b/src/assets/scss/components/03_organisms/notebookContainer.scss
@@ -4,7 +4,7 @@ $chapterHeight: 80px;
     position: absolute;
     top: 0;
     right: -100%;
-    z-index: 50;
+    z-index: 10;
     overflow: scroll;
     width: 50%;
     height: 100vh;
