--- a/src/assets/scss/components/03_organisms/sidebars/statusbar.scss
+++ b/src/assets/scss/components/03_organisms/sidebars/statusbar.scss
@@ -4,7 +4,7 @@
     right: $elements-space;
     height: $elements-space;
     background-color: $white;
-    z-index: 11;
+    z-index: 10;
   
     box-shadow: inset 0 -1px 0 0 $base-uicolor-2;
     text-align: right;
